# coda

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES.linux  COPYING  CREDITS  ChangeLog  INSTALL  LICENSE  Makeconf  Makeconf.setup.in  Makefile.am  Makefile.in  NEWS  README.BSD  README.Solaris  README.kerberos  README.md  README.nt  README.win95  acconfig.h  aclocal.m4  bootstrap.sh  coda_config.h.in  config.h.in  configure  configure.ac  configure.in  md.c  mkdocs.yml
coda-src/: Makefile.am  Makefile.in  README.historical  configure.in
coda-src/advice/: Demo  DemoSetup  Makefile.in  advice_install.sh  advice_srv.cc  advice_srv.h  advice_srv.h.in  console_handler.cc  console_handler.h  conversions.cc  conversions.h  counters.cc  counters.h  daemon.cc  data.cc  data.h  discomiss  fail.cc  filecopy.cc  filecopy.h  globals.cc  globals.h  helpers.cc  helpers.h  hoard.cc  hoardlist  miss.cc  miss.h  misslist  mybstree.cc  mybstree.h  portability_problems.cc  portability_problems.h  programspy.cc  programspy.h  pseudomiss  readmiss  reconnection  reintegration_pending  replacementlog.cc  (+10 more)
coda-src/al/: .gitignore  Makefile.am  Makefile.in  TODO  al.h  alprocs.c  altest.c  pdb.c  pdb.h  pdbarray.c  pdbarray.h  pdbarray_test.c  pdbdb.c  pdbpack.c  pdbprofile.c  pdbtool.8  pdbtool.c  pdbtool.sgml  prs.h
coda-src/asr/: .gitignore  Makefile.am  Makefile.in  asr.h  path.c  resolve.eg  resolver.cc  resolver.lex  resolver.yacc  resolver_lexer.l  resolver_parser.y  ruletypes.cc  ruletypes.h  wildmat.c
coda-src/asrlauncher/: .gitignore  Makefile.am  Makefile.in  asrlauncher.c
coda-src/auth2/: .gitignore  Makefile.am  Makefile.in  acommon.c  adduser.c  adduser.cc  au.1  au.c  au.cc  au.sgml  auser.c  auser.cc  auser.h  auth2.8  auth2.c  auth2.cc  auth2.common.h  auth2.rpc2  auth2.sgml  authmon.c  authmon.cc  avenus.c  avenus.cc  avenus.h  avice.c  avice.cc  avice.h  clog.1  clog.c  clog.sgml  codatoken.c  codatoken.h  cpasswd.1  cpasswd.c  cpasswd.sgml  ctokens.1  ctokens.c  ctokens.sgml  cunlog.1  cunlog.c  (+24 more)
coda-src/blurb/: Makefile.in  blurb-ansify  blurb.cc  blurb.doc  blurb.mss
coda-src/camstuff/: Makefile.in  camlib_modules.h  int_mem.cc  int_mem.h  test.cc
coda-src/dir/: .gitignore  Makefile.am  Makefile.in  buffer.cc  coda_dir.h  codadir.c  codadir.h  dhcache.c  dir.cc  dir.private.h  dirbody.c  dirbody.h  dirinode.c  dirprivate.h  dirtest.c  dirtest.cc  fid.c  salvage.cc  test.c
coda-src/egasr/: .gitignore  Makefile.am  Makefile.in  filerepair.c  filerepair.cc  removeinc.c  removeinc.cc  xaskuser  xfrepair
coda-src/fail/: Makefile.coda.yuk  Makefile.dist  Makefile.in  Makefile.real  clear.c  delay.c  delay.h  fail.c  fail.h  fcon.c  fcon.rpc2  filcon.c  filtutil.c  filtutil.h  ft.rpc2  ftclient.c  ftserver.c  heal.c  isolate.c  join.c  list.c  newheal.c  newpartition.c  partition.c  slow.c  ttyfcon.c  tv.rpc2  tvclient.c  tvserver.c
coda-src/guitools/: Advice.tcl  CodaConsole.in  Consider.tcl  ConsiderAdding.tcl  ConsiderRemoving.tcl  ControlPanel.tcl  Date.tcl  DiscoMiss.tcl  Events.tcl  Globals.tcl.in  Globals_specific.tcl  Helper.tcl  HoardWalk.tcl  HoardWalkAdvice.tcl  Indicators.tcl  Initialization.tcl  Lock.tcl  Log.tcl  Makefile.in  ManualDemo.tcl  Network.tcl  OutsideWorld.tcl  ReadMiss.tcl  Reconnection.tcl  Reintegration.tcl  Repair.tcl  Space.tcl  Task.tcl  Timing.tcl  Tokens.tcl  WeakMiss.tcl  tixCodaMeter.tcl  translate.in
coda-src/kerndep/: Makefile.am  Makefile.in  SYS.h  coda.h  mach_vioctl.h  netbsdasm.h  pioctl.c  pioctl.h  pioctl.s  setpag.c  setpag.s
coda-src/libal/: Makefile.in  al.h  alprocs.c  alprocs.cc  altest.c  altest.cc  lexedit.sed  parsepdb.h  parsepdb.lex  parsepdb.yacc  pcf.h  pcfgen.c  pcfgen.cc  pcfprocs.c  pcfprocs.cc  prs.h  prs_fs.h
coda-src/librepair/: Makefile.am  Makefile.in  cure.cc  cure.h  dir.cc  path.cc  predicate.cc  predicate.h  repcmds.cc  repcmds.h  repio.cc  repio.h  resolve.cc  resolve.h  restest.cc  rvol.cc
coda-src/lka/: .gitignore  Makefile.am  Makefile.in  lka.c  lka.cc  lka.h  lka_private.h  mklka.c  mklka.cc  shaprocs.c  shaprocs.cc  testlka.c  testlka.cc
coda-src/login/: Makefile.in  clog.c  clog.cc  cpasswd.c  cpasswd.cc  ctokens.c  ctokens.cc  cunlog.c  cunlog.cc  testlog.c  testlog.cc
coda-src/norton/: .gitignore  Makefile.am  Makefile.in  README.parser  commands.cc  dummy.cc  norton-dir.cc  norton-print.cc  norton-rds.cc  norton-recov.cc  norton-reinit.cc  norton-setup.cc  norton-vnode.cc  norton-volume.cc  norton.8  norton.cc  norton.h  norton.mss  norton.sgml  parser.cc  parser.h  reinit
coda-src/partition/: .gitignore  Makefile.am  Makefile.in  README  backupifs.c  ftreeifs.c  ftreeifs.h  inodeops.c  inodeops.h  inoder.c  makeftree.c  partition.c  partition.h  simpleifs.c  simpleifs.h  viceinode.h  vicetab.5  vicetab.c  vicetab.h  vicetab.sgml
coda-src/pdbstuff/: Makefile.in  README  codapw.init  groups.coda  mvdb.cc  passwd.coda  pwd2pdb.cc  vice.pcf
coda-src/portmapper/: .gitignore  Makefile.in  map.c  map.h  portmapper.rpc2  rpc2portmap.c  server.c  simpleclient.c
coda-src/repair/: .gitignore  Makefile.am  Makefile.in  path.cc  (+9 more)
python/: .gitignore  Makefile.am  README.md  coda-make-certs  coda-sync-acls  coda-sync-acls.in  mkdocs.yml  pyproject.toml  setup.py  volmunge  volmunge.1  volmunge.in
tools/: .gitignore  CHECKOUT  Coda_CA.crt  Makefile.am  PACKAGING.README  alphaci  auth2-master.service  auth2-master.tmpl  auth2-slave.service  auth2-slave.tmpl  bbpost  build-coda-rpm.pl  build-fs-rpm  c++2html  check-blurb  check-blurb.in  check-clang-format  check-clang-format.in  checklocks  cli-setup.hint  cmake  cmake.c  coda-95.wse  coda-auth2.tmpl  coda-client-95-50x.wse  coda-client-95-52x.wse  coda-client.init  coda-client.service  coda-client.tmpl  coda-kernel-module.spec.in  coda-make-certs.in  coda-server-nt-50x.wse  coda-server-nt-52x.wse  coda-server.init  coda-server.service  coda-server.tmpl  coda-update-master.service  coda-update-master.tmpl  coda-update-slave.service  coda-update-slave.tmpl  (+28 more)
(+2113 files in other folders)
