dnl Process this file with autoconf to produce a configure script.
AC_INIT(resolve/resolve.h)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LEX
AC_PROG_RANLIB
AC_PROG_YACC

dnl Checks for libraries.
dnl Replace `main' with a function in -lal:
AC_CHECK_LIB(al, main)
dnl Replace `main' with a function in -lcompat:
AC_CHECK_LIB(compat, main)
dnl Replace `main' with a function in -lcs:
AC_CHECK_LIB(cs, main)
dnl Replace `main' with a function in -lcurses:
AC_CHECK_LIB(curses, main)
dnl Replace `main' with a function in -ll:
AC_CHECK_LIB(l, main)
dnl Replace `main' with a function in -llwp:
AC_CHECK_LIB(lwp, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lmach:
AC_CHECK_LIB(mach, main)
dnl Replace `main' with a function in -lrpc2:
AC_CHECK_LIB(rpc2, main)
dnl Replace `main' with a function in -lsys:
AC_CHECK_LIB(sys, main)
dnl Replace `main' with a function in -ltermcap:
AC_CHECK_LIB(termcap, main)
dnl Replace `main' with a function in -lutil:
AC_CHECK_LIB(util, main)
dnl Replace `main' with a function in -ly:
AC_CHECK_LIB(y, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_C_INLINE
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_DECL_SYS_SIGLIST
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_MAJOR
AC_FUNC_MMAP
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gethostname gettimeofday getwd mkdir mktime putenv rmdir select socket stime strdup strerror strftime strstr strtod strtol strtoul)



AC_OUTPUT(GNUmakefile scripts/GNUmakefile sys/GNUmakefile dir/GNUmakefile mlwp/GNUmakefile.coda mlwp/GNUmakefile.real rpc2/GNUmakefile util/GNUmakefile libal/GNUmakefile rp2gen/GNUmakefile pdbstuff/GNUmakefile blurb/GNUmakefile camstuff/GNUmakefile fail/GNUmakefile vicedep/GNUmakefile pioctl/GNUmakefile auth2/GNUmakefile vv/GNUmakefile login/GNUmakefile vol/GNUmakefile resolve/GNUmakefile venus/GNUmakefile advice/GNUmakefile repair/GNUmakefile res/GNUmakefile rvmres/GNUmakefile volutil/GNUmakefile vtools/GNUmakefile vice/GNUmakefile update/GNUmakefile norton/GNUmakefile asr/GNUmakefile egasr/GNUmakefile)

